# it-consulting-system

./: .gitignore  Dockerfile  README.md  pyproject.toml  test.db
app/: main.py  models.py  seed.py
app/templates/: dashboard.html  employees.html  layout.html  project_detail.html  project_form.html
frontend/app/: main.py
frontend/app/templates/: billings.html  dashboard.html  employees.html  layout.html  project_detail.html  project_edit.html
services/project/: project.db  test_project.db
services/project/app/: main.py  models.py  schemas.py
services/project/tests/: test_projects.py
